# TurboDoc

./: .editorconfig  .gitignore  .justfile  App.manifest  App.xaml  App.xaml.cs  CLAUDE.md  Cargo.toml  Copy-TestWorkspace.ps1  Directory.Build.props  MainWindow.xaml  MainWindow.xaml.cs  RATIONALE-Platform.md  README.md  TurboDoc.csproj  TurboDoc.slnx  WindowUtils.cs  backup-workspace.nu  biome.json  build.rs  bun.lockb  bunfig.toml  components.json  package.json  tsconfig.json  vite.config.ts
.claude/commands/: catch-up.md
app/: Directory.Build.props  MainWindow.xaml  MainWindow.xaml.cs  TurboDoc.csproj
app/src/: App.manifest  MainWindow.xaml.cs  TurboDoc.csproj  WindowUtils.cs
crates/nkcore/: Cargo.toml
crates/nkcore-macros/: Cargo.toml
crates/nkcore-macros/src/: lib.rs
crates/nkcore/src/: error.rs  lib.rs
data/: .gitignore  workspace.test.json  workspace.test.md
docs/: Bug-v0.2-Migration.md  Plan-Frontend.md  Plan-v0.2.md  Plan-v0.3.md  Proposal-1-Frontend.md  Proposal-1-Frontend.md.bak  README.md
frontend/: app.tsx  components.json  constants.ts  context.ts  data.test.ts  data.ts  global.css  global.tailwind.css  global.theme.css  global.ts  host.d.ts  index.css  index.html  index.ts  index.tsx  ipc.ts  package.json  svelte.config.ts  tsconfig.json  vite.config.ts  webview2.d.ts
frontend/components/ui/: dropdown-menu.tsx
frontend/core/: context.ts  data.ts  ipc.ts  localStorage.ts  prelude.ts  providerData.svelte.ts  ui-state-storage.ts  uiState.ts
frontend/explorer/: ExplorerCreateGroupComponent.tsx  ExplorerGroupHeader.tsx  ExplorerGroupMenu.tsx  ExplorerItemProps.ts  common.d.ts  index.tsx
frontend/explorer/components/: misc.tsx
frontend/explorer/crate/: CrateCard.tsx  CrateMenu.tsx  CratePageList.tsx  CrateVersionSelector.tsx
frontend/explorer/items/: crate.tsx
frontend/prelude/: index.ts
frontend/providers/rust/: cache.svelte.ts  crates-api.ts  import.tsx  index.ts  index.tsx
frontend/services/: crates-api.integration.test.ts  crates-api.ts
frontend/src/core/: context.svelte.ts  context.ts  data.ts  ipc.ts  providerData.svelte.ts  uiState.svelte.ts
frontend/src/providers/: index.ts
frontend/src/providers/rust/: cache.svelte.ts  effects.svelte.ts  url.test.ts
frontend/src/ui/: App.svelte
frontend/src/ui/explorer/: Explorer.svelte  ExplorerCreateGroupComponent.svelte  ExplorerGroup.svelte  ExplorerGroupHeader.svelte  ExplorerItem.svelte  ExplorerItemMenu.svelte  ExplorerPageList.svelte  ExplorerProvider.svelte
frontend/ui/: App.svelte  App.tsx
frontend/ui/common/: Icon.svelte  Resizable.tsx
frontend/ui/explorer/: ExplorerCreateGroupComponent.svelte  ExplorerCreateGroupComponent.tsx  ExplorerGroup.svelte  ExplorerGroupHeader.svelte  ExplorerGroupHeader.tsx  ExplorerItem.svelte  ExplorerItem.tsx  ExplorerItemMenu.svelte  ExplorerItemMenu.tsx  ExplorerPageList.svelte  ExplorerPageList.tsx  ExplorerProvider.svelte  InputActionDialog.svelte  index.tsx
frontend/utils/: url-parser.test.ts  url-parser.ts  version-group.test.ts  version-group.ts  version-groups.test.ts  version-groups.ts
scripts/: backup-workspace.nu  dev-server.nu
server/: api.ts  common.ts  crates-cache.ts  http-cache.ts  index.ts  package.json  proxy.ts  tsconfig.json
server/src/: api.ts  common.ts  crates-cache.ts  http-cache.ts  index.ts  proxy.ts
server/src/api/: crates.ts
src/: app.rs  common.rs  consts.rs  core.ts  index.tsx  ipc.rs  launcher.rs  main.rs  server.rs  webview.rs
src/app/core/: context.ts  data.d.ts  data.ts  ipc.ts  prelude.ts  ui-state-storage.ts
src/app/providers/: cache-schemas.ts  index.ts
src/app/providers/rust/: cache.ts  crates-api.ts  import.tsx  index.tsx
src/app/ui/: App.tsx
src/app/ui/common/: Icon.tsx
src/app/ui/explorer/: ExplorerCreateGroupComponent.tsx  ExplorerGroupHeader.tsx  ExplorerItem.tsx  ExplorerItemMenu.tsx  ExplorerPageList.tsx  index.tsx
src/app/utils/: version-group.test.ts
src/core/: context.ts  data.d.ts  ipc.ts  prelude.ts
src/providers/: index.ts
src/providers/rust/: import.tsx  index.tsx  url.test.ts  url.ts
src/providers/rust.crate/: crates-api.integration.test.ts  crates-api.ts  import.tsx  index.ts  index.tsx  url.test.ts  url.ts
src/server/: api.ts  cache.ts  common.ts  http-cache.ts  index.ts  proxy.ts
src/server/cache/: disk.rs  generic.rs
src/ui/: App.tsx
src/ui/common/: Icon.tsx
src/ui/explorer/: ExplorerCreateGroupComponent.tsx  ExplorerGroupHeader.tsx  ExplorerItem.tsx  ExplorerItemMenu.tsx  ExplorerPageList.tsx  ExplorerVersionSelector.tsx  index.tsx
src/utils/: version-group.test.ts  version-group.ts
