[package]
name = "turbodoc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
http = "1.3.1"
log = "0.4.28"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.24", features = ["blocking"] }
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
typeshare = "1.0.4"
webview2-com = "0.38.0"
widestring = "1.2.1"
winit = { version = "0.30.12", default-features = false, features = ["rwh_06"] }

# LOCK: webview2-com@0.38.0 depends on windows@0.61.0.
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
]}
native-dialog = { version = "0.9.3", features = ["windows_dpi_awareness", "windows_visual_styles"] }

[lints.clippy]
cargo       = { level = "warn", priority = -1 }
nursery     = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }

# I-idiomatic-code #restriction
arbitrary_source_item_ordering = "allow"
as_conversions = "allow"
blanket_clippy_restriction_lints = "allow"
exhaustive_structs = "allow"
exhaustive_enums = "allow"
expect_used = "allow"
implicit_return = "allow"
indexing_slicing = "allow"
let_underscore_must_use = "allow" # allows ignoring results of functions marked `#[must_use]`
let_underscore_untyped = "allow"
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
missing_trait_methods = "allow"
panic = "allow"
print_stdout = "allow"
print_stderr = "allow"
pub_use = "allow"
question_mark_used = "allow"
ref_patterns = "allow"
self_named_module_files = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
wildcard_enum_match_arm = "allow"
unwrap_used = "allow"

# II-conflicting-lints #complexity
needless_borrowed_reference = "allow" # or: `clippy::pattern_type_mismatch`

# II-conflicting-lints #style
needless_else = "allow" # or: `clippy::else_if_without_else`

# II-conflicting-lints #restriction
pub_with_shorthand = "allow"  # xor: `clippy::pub_without_shorthand`
semicolon_outside_block = "allow"  # xor: `clippy::semicolon_inside_block`
unseparated_literal_suffix = "allow"  # xor: `clippy::separated_literal_suffix`

# III-code-style #style
doc_overindented_list_items = "allow" # allows using 4 spaces for indenting docs
manual_range_contains = "allow" # makes graphics code less noisy
match_ref_pats = "allow" # just looks cool XD

# III-code-style #nursery
suboptimal_flops = "allow" # makes graphics code less noisy

# III-code-style #pedantic
if_not_else = "allow" # helps clarity in many cases
module_name_repetitions = "allow" # e.g.: `winit::window::WindowBuilder`
must_use_candidate = "allow"

# III-code-style #restriction
absolute_paths = "allow"
min_ident_chars = "allow" # common in graphics code, e.g. uv, xy, rgba, etc.
mod_module_files = "allow"
multiple_inherent_impl = "allow"
try_err ="allow"

# IV-arithmetic-and-casting #pedantic
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"

# IV-arithmetic-and-casting #restriction
arithmetic_side_effects = "allow"
float_arithmetic = "allow"
float_cmp = "allow"
integer_division = "allow"
integer_division_remainder_used = "allow"
modulo_arithmetic = "allow"

# V-fast-prototyping #cargo
cargo_common_metadata = "allow"
multiple_crate_versions = "allow" # can be fixed using `allowed-duplicate-crates`

# V-fast-prototyping #pedantic
missing_errors_doc = "allow"
missing_panics_doc = "allow"
wildcard_imports = "allow"

# V-fast-prototyping #restriction
allow_attributes_without_reason = "allow"
as_underscore = "allow"
missing_assert_message = "allow"
multiple_unsafe_ops_per_block = "allow"
undocumented_unsafe_blocks = "allow"
