[package]
name = "turbodoc"
version = { workspace = true }
edition = { workspace = true }

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies.nkcore]
git = "git://nekomaru-ubuntu/Nekomaru-Rust.git"
branch = "main"
features = ["debug", "winit"]

[dependencies]
nkcore = { workspace = true }

anyhow = "1.0"
http = "1.3.1"
log = "0.4.28"
pretty_env_logger = "0.5.0"
serde_json = "1.0"
tap = "1.0.1"
webview2-com = "0.39.1"
widestring = "1.2.1"
win32job = "2"
winit = { version = "0.30.12", default-features = false, features = ["rwh_06"] }

# LOCK: reqwest@0.13.0 depends on aws-lc-sys which fails to build
# due to the following issue:
#       https://github.com/seanmonstar/reqwest/issues/2937
reqwest = { version = "0.12.28", features = ["blocking"] }

native-dialog = { version = "0.9.6", features = [
    "windows_dpi_awareness",
    "windows_visual_styles",
]}

windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
]}
